# YAVG

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_w64_x86-64.bat  run_windows.bat
cmake/: toolchain-windows.cmake
libs/include/glad/: glad.h
libs/src/: glad.c
shaders/: gui.slang  shader.slang  text.slang
src/: GameFolder.cpp  main.cpp  main_old.cpp
src/Parser/: BinaryData.hpp  Byteswap.hpp  File.cpp  File.hpp  FileBasic.cpp  Source.cpp  Source.hpp  SourceCollection.hpp
src/Text/: DumpText.cpp  DumpText.hpp  TexturePacker.cpp  TexturePacker.hpp
src/client/: Camera.cpp  Camera.hpp  FPSMessurement.hpp  Game.cpp  Game.hpp  GameFolder.cpp  GameFolder.hpp  MeshWeaver.hpp
src/graphics/: CommandBuffer.cpp  CommandBuffer.hpp  Device.cpp  Device.hpp  Pipeline.hpp  Queue.hpp  Swapchain.hpp  ValidationLayer.cpp  ValidationLayer.hpp  VertexBuffer.hpp  Window.cpp  Window.hpp
src/network/basic/: IPAddress.cpp  IPAddress.hpp  SocketBase.cpp  SocketBase.hpp  SocketPoll.cpp  SocketPoll.hpp  TcpListener.cpp  TcpListener.hpp  TcpSocket.cpp  TcpSocket.hpp  UdpSocket.cpp  UdpSocket.hpp
src/server/: Chunk.cpp  Chunk.hpp  Region.hpp  Server.hpp  World.hpp
src/vulkan/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DepthBuffer.cpp  DepthBuffer.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorLayout.cpp  DescriptorLayout.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  DeviceFeatures.cpp  DeviceFeatures.hpp  GraphicsQueue.hpp  Header.hpp  Image.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  PushConstant.cpp  PushContant.hpp  Queue.hpp  RenderSync.cpp  RenderSync.hpp  Swapchain.cpp  Swapchain.hpp  UBO.hpp  ValidationLayer.cpp  ValidationLayer.hpp  VertexBuffer.hpp  Window.cpp  Window.hpp
src/vulkan/setup/: CommandBuffer.hpp  CommandPool.hpp  Device.cpp  Device.hpp  GraphicsQueue.cpp  GraphicsQueue.hpp  Instance.cpp  Instance.hpp  Queue.cpp  Queue.hpp  RenderSync.cpp  RenderSync.hpp  Swapchain.cpp  Swapchain.hpp  ValidationLayer.hpp  Window.cpp  Window.hpp
src/vulkan_old/: Buffer.hpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DepthBuffer.hpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  Image.hpp  Image2.hpp  Pipeline.cpp  Pipeline.hpp  PushContant.hpp  Render.cpp  Render.hpp  Swapchain.hpp  UBO.hpp  VertexBuffer.hpp
